Added PropTypes to Components to validate Props.

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         <div id="app" />
+        <noscript>
+            <h3>This app requires Javascript.</h3>
+        </noscript>
     </body>
 </html>
