--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,15 @@
         <noscript>
             <h3>This app requires Javascript.</h3>
         </noscript>
+        <script>
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", function () {
+                    navigator.serviceWorker
+                        .register("/service-worker.js")
+                        .then(console.log)
+                        .catch(console.log);
+                });
+            }
+        </script>
     </body>
 </html>
